# LC3-VM

./: .gitignore  CMakeLists.txt  README.md
include/: console.h  image.h  lc3.h  trap.h
src/: CMakeLists.txt  console.c  image.c  lc3.c  trap.c
